# factory-ml-offline-system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/instructions/: ai-advanced-patterns.instructions.md  ai-code-examples-reference.instructions.md  ai-code-writing.instructions.md  ai-pull-request.instructions.md  git-workflow.instructions.md
config/: app_settings.json  schema.json
docs/: ai-advanced-patterns.md  ai-code-examples-reference.md  ai-code-writing.instructions.md  api_specification.md  dependency_migration_plan.md  design_spec.md  implementation_plan.md  user_guide.md
docs/instructions_tmp/: ai-project-structure.instructions.md  ai-pull-request.instructions.md  git-workflow-ml-experiments.instructions.md  git-workflow.instructions.md
java-app/: README.md  pom.xml
java-app/src/main/java/com/factory/ml/: FactoryMLApp.java
java-app/src/main/resources/fxml/: inference_tab.fxml  main_view.fxml  simulation_view.fxml  training_tab.fxml
java-app/src/main/resources/styles/: application.css
java-app/src/test/java/com/factory/ml/: DataValidatorTest.java  FeatureTransformerTest.java  InferenceServiceTest.java
models/: README.md  archive  current
python-trainer/: README.md  requirements.txt  setup.py
python-trainer/src/analysis/: drift_detector.py  metrics_calculator.py  shap_analyzer.py
python-trainer/src/trainer/: data_loader.py  main.py  model_trainer.py  onnx_converter.py  preprocessor.py  report_generator.py
python-trainer/tests/: __init__.py  test_main.py
python-trainer/tests/fixtures/reports/: training_summary.json
(+16 files in other folders)
