[project]
name = "factory-ml-offline-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "onnx>=1.17.0",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.14.8",
    "types-requests>=2.32.0.20241016",
]
