[project]
name = "factory-ml-offline-system"
version = "0.1.0"
description = "A machine learning system for structured data in an offline factory environment."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Factory ML Team", email = "factory-ml@example.com"}
]
dependencies = [
    "dtreeviz>=1.3.1",
    "evidently>=0.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.12.1",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "shap>=0.41.0",
]

[project.scripts]
trainer = "trainer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python-trainer/src/trainer", "python-trainer/src/analysis"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.14.8",
    "types-requests>=2.32.0.20241016",
]
